CKA_PARAM_SET missing from the CK_ULONG list in softoken.
Categories
(NSS :: Libraries, defect, P3)
Tracking
(firefox-esr140 unaffected, firefox148 wontfix, firefox149 wontfix, firefox150 fixed)
| Tracking | Status | |
|---|---|---|
| firefox-esr140 | --- | unaffected |
| firefox148 | --- | wontfix |
| firefox149 | --- | wontfix |
| firefox150 | --- | fixed |
People
(Reporter: rrelyea, Assigned: rrelyea)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
CKA_PARAMETER_SET is a CKA_ULONG, and should be stored in network order in the database, but it's missing from the list. It needs to be added to the list and we need to be able to read incorrectly stored versions (since the bad version has been shipped for a couple of releases now).
| Assignee | ||
Updated•1 month ago
|
| Assignee | ||
Comment 1•1 month ago
|
||
CKA_PARAMETER_SET is a CKA_ULONG, and should be stored in network order in the database, but it's missing from the list. It needs to be added to the list and we need to be able to read incorrectly stored versions (since the bad version has been shipped for a couple of releases now).
Comment 2•1 month ago
|
||
Is there a specific bug/patch that introduced this issue?
| Assignee | ||
Comment 3•1 month ago
|
||
Either the ML-DSA or the pkcs #11 v3.2 patch. but the ML-DSA one is where it triggered actually putting things in the database.
https://phabricator.services.mozilla.com/D264148
Updated•1 month ago
|
Pushed by rrelyea@redhat.com:
https://hg.mozilla.org/projects/nss/rev/af6134864f43
CKA_PARAM_SET missing from the CK_ULONG list in softoken.
Updated•24 days ago
|
Updated•17 days ago
|
Description
•